# neukgu

./: .gitignore  COMMON_ISSUES.md  Cargo.toml  INSTALL.md  KEY_BINDINGS.md  README.md  TODO.md  build.rs  system.pdl
default-skills/code-onboarding-report/: SKILL.md
default-skills/server/: SKILL.md
default-skills/server-development/: SKILL.md
sample_instructions/: ai-engine.md  beaver.md  birthday.md  bootstrap-lang.md  check-ai-api.md  codex.md  disk-clean.md  disk-vis.md  explain-zig-incremental-compilation.md  harness-1.md  hash-vulnerability-1.md  hash-vulnerability-2.md  hex-viewer.md  history.md  iced-2.md  iced.md  json-prettifier.md  leet-code-programmers-30-468379.md  planet.md  psd-tools-1.md  self-improvement-1.md  self-improvement-2.md  seoul-metro-1.md  voxel.md  write-dev-doc.md
src/: chat.rs  config.rs  context.rs  error.rs  global.rs  image.rs  interrupt.rs  lib.rs  log.rs  main.rs  model.rs  parse.rs  pdf.rs  prettify.rs  prompt.rs  request.rs  response.rs  sandbox.rs  skill.rs  snapshot.rs  subprocess.rs  tool.rs  turn.rs  ui.rs
src/request/: anthropic.rs  gemini.rs  mock.rs  openai.rs  openai_comp.rs  openai_legacy.rs
src/response/: anthropic.rs  gemini.rs  openai.rs  openai_comp.rs  openai_legacy.rs
src/tool/: ask.rs  chrome.rs  image_edit.rs  patch.rs  path.rs  permission.rs  read.rs  render.rs  run.rs  write.rs
src/ui/: gui.rs  tui.rs
src/ui/gui/: api_key.rs  browser.rs  chat.rs  config.rs  error.rs  file_change.rs  file_editor.rs  file_selector.rs  git.rs  index.rs  launcher.rs  logs.rs  model_store.rs  popup.rs  scratch_pad.rs  (+5 more)
(+3 files in other folders)
