[package]
name = "neukgu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-std = "1.13.2"
base64 = "0.22.1"
chrono = "0.4.44"
flate2 = "1.1.9"
hayro = "0.6.0"
headless_chrome = "1.0.21"
iced = { version = "0.14.0", features = ["image", "tokio"] }
image = "0.25.10"
png = "0.18.1"
ragit-cli = "0.4.5"
ragit-fs = "0.4.5"
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "3.1.0"
tera = "1.20.1"
tokio = { version = "1.51.0", features = ["full"] }
